--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "docker-cli-js": "~2.5.1",
     "eslint": "~5.5.0",
     "eslint-plugin-react": "~7.11.1",
+    "eslint-plugin-react-hooks": "~2.0.1",
     "execa": "~0.10.0",
     "glob": "~7.1.3",
     "gulp": "~3.9.1",
