--- a/.eslintrc
+++ b/.eslintrc
@@ -89,6 +89,6 @@
     "react/no-set-state": ["off"],
     "react/require-optimization": ["off"],
     "react-hooks/rules-of-hooks": ["error"],
-    "react-hooks/exhaustive-deps": ["off"]
+    "react-hooks/exhaustive-deps": ["error"]
   }
 }
