--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,5 @@
 {
   "extends": ["eslint:all", "plugin:react/all"],
-  "parser": "babel-eslint",
   "env": {
     "es6": true,
     "browser": true,
@@ -10,12 +9,13 @@
   "parserOptions": {
     "ecmaVersion": 2018,
     "ecmaFeatures": {
+      "impliedStrict": true,
       "jsx": true
     }
   },
   "settings": {
     "react": {
-      "version": "16.5"
+      "version": "16.9"
     }
   },
   "plugins": [
@@ -31,6 +31,7 @@
     "dot-location": ["error", "property"],
     "func-names": ["error", "as-needed"],
     "func-style": ["off"],
+    "function-call-argument-newline": ["error", "consistent"],
     "id-length": ["off"],
     "indent": ["error", 2, { "SwitchCase": 1, "ignoredNodes": ["JSXOpeningElement"] }],
     "init-declarations": ["off"],
@@ -75,6 +76,7 @@
     "react/forbid-component-props": ["error", { "forbid": [{ "propName": "style", "allowedFor": ["Icon"] }] }],
     "react/forbid-prop-types": ["off"],
     "react/jsx-closing-bracket-location": [1, "props-aligned"],
+    "react/jsx-fragments": ["error", "element"],
     "react/jsx-handler-names": ["error", { eventHandlerPrefix: "(handle)", eventHandlerPropPrefix: "(on|before|after)" }],
     "react/jsx-indent": ["error", 2],
     "react/jsx-indent-props": ["error", 2],
@@ -83,11 +85,13 @@
     "react/jsx-no-bind": ["error", { "allowArrowFunctions": true }],
     "react/jsx-no-literals": ["off"],
     "react/jsx-one-expression-per-line": ["off"],
+    "react/jsx-props-no-spreading": ["off"],
     "react/jsx-sort-props": ["off"],
     "react/no-danger": ["off"],
     "react/no-multi-comp": ["off"],
     "react/no-set-state": ["off"],
     "react/require-optimization": ["off"],
+    "react/static-property-placement": ["off"],
     "react-hooks/rules-of-hooks": ["error"],
     "react-hooks/exhaustive-deps": ["error"]
   }
