--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bcrypt": "~3.0.6",
     "body-parser": "~1.19.0",
     "classnames": "~2.2.6",
+    "clipboard-copy": "~3.1.0",
     "connect-mongo": "~2.0.1",
     "core-js": "~3.2.1",
     "decompress": "~4.2.0",
