--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "body-parser": "~1.19.0",
     "classnames": "~2.2.6",
     "clipboard-copy": "~3.1.0",
+    "color": "~3.1.2",
     "connect-mongo": "~2.0.1",
     "core-js": "~3.2.1",
     "decompress": "~4.2.0",
