--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "rc-form": "^2.1.0",
     "react": "~16.9.0",
     "react-beautiful-dnd": "~11.0.5",
+    "react-color": "~2.17.3",
     "react-dimensions": "~1.3.1",
     "react-dom": "~16.9.0",
     "react-highlighter": "~0.4.3",
