--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       - NODE_ENV: development
       - ELMU_ENV: test
       - YARN_CACHE_FOLDER: ~/.cache/yarn
+      - RELEASE_NUMBER: 0.0.<< pipeline.number >>
     steps:
       - checkout
       - restore_cache:
@@ -41,6 +42,10 @@ jobs:
       - run:
           name: Build
           command: ./node_modules/.bin/gulp ci
+      - run:
+          name: Create release info file
+          command: |
+            echo "Release Number: $RELEASE_NUMBER" > ./dist/release.txt
       - persist_to_workspace:
           root: "."
           paths:
