--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "http-errors": "~1.8.0",
     "iframe-resizer": "~4.2.11",
     "immutable": "~4.0.0-rc.12",
+    "joi": "~17.3.0",
     "js-cookie": "~2.2.1",
     "locale-compare": "~1.0.0",
     "make-error": "~1.3.6",
