--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "make-error": "~1.3.6",
     "markdown-it": "~12.0.4",
     "mem": "~8.0.0",
+    "memoize-one": "~5.1.1",
     "mime": "~2.4.7",
     "minio": "7.0.16",
     "moment": "~2.29.1",
@@ -131,7 +132,6 @@
     "moment-locales-webpack-plugin": "~1.2.0",
     "process": "~0.11.10",
     "sinon": "~9.2.2",
-    "stream-to-promise": "~3.0.0",
     "umzug": "~2.3.0",
     "webpack": "~5.11.0",
     "webpack-bundle-analyzer": "~4.3.0"
