--- a/src/components/pages/settings.yml
+++ b/src/components/pages/settings.yml
@@ -1,3 +1,15 @@
-landingPageKey:
-  en: Landing page key
-  de: Landing-Page-Key
+homeLanguagesHeader:
+  en: Landing page languages
+  de: Sprachen auf der Startseite
+homeLanguagesSubHeader:
+  en: The top most entry will be used as default
+  de: Der oberste Eintrag wird als Standard benutzt
+helpPageHeader:
+  en: Help page
+  de: Hilfe-Seite
+termsPageHeader:
+  en: Terms of usage page
+  de: Nutzungsbedingungen-Seite
+footerLinksHeader:
+  en: Footer links
+  de: Footer-Links
