Create plugin that integrates diagrams.net
Resolves #106

--- a/src/plugins/interval-trainer/interval-trainer.yml
+++ b/src/plugins/interval-trainer/interval-trainer.yml
@@ -1,3 +1,6 @@
+name:
+  en: Interval trainer
+  de: Intervall-Trainer
 oneAttemptSuccesses:
   en: Tasks solved on the first attempt
   de: Aufgaben gelöst nach nur einem Versuch
