Add functionality to clone sections
Resolves #110

--- a/src/resources/common.yml
+++ b/src/resources/common.yml
@@ -28,6 +28,9 @@ apply:
 discard:
   en: Discard
   de: Verwerfen
+duplicate:
+  en: Duplicate
+  de: Duplizieren
 delete:
   en: Delete
   de: Löschen
