Make author names clickable for priviledged users
Resolves #48

--- a/src/components/credits-footer.yml
+++ b/src/components/credits-footer.yml
@@ -10,3 +10,6 @@ source:
 contributionsBy:
   en: Contributions by
   de: Bearbeitungen durch
+revisionBy:
+  en: Revision created by
+  de: Revision erstellt von
