--- a/src/plugins/image/image.yml
+++ b/src/plugins/image/image.yml
@@ -7,6 +7,9 @@ source:
 externalLink:
   en: External link
   de: Externer Link
+internalLink:
+  en: Internal link
+  de: Interner Link
 elmuCdn:
   en: Elmu CDN
   de: Elmu CDN
