ELMU #73 Add restore button to revision picker

--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -22,3 +22,6 @@ permalinkCopied:
 permalinkCouldNotBeCopied:
   en: The permalink could not be copied to the clipboard
   de: Der Permalink konnte nicht in die Zwischenablage kopiert werden
+restore:
+  en: Restore
+  de: Wiederherstellen
