--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "react": "~16.14.0",
     "react-beautiful-dnd": "~13.0.0",
     "react-color": "~2.19.3",
+    "react-compare-slider": "~2.1.0",
     "react-countdown": "~2.3.1",
     "react-dimensions": "~1.3.1",
     "react-dom": "~16.14.0",
