--- a/src/components/login-logout.yml
+++ b/src/components/login-logout.yml
@@ -7,9 +7,9 @@ logoff:
 register:
   en: Register
   de: Registrieren
-editProfile:
-  en: Edit profile
-  de: Profil bearbeiten
+account:
+  en: My account
+  de: Mein Konto
 logonState:
   en: You are logged on as <0>{username}</0>
   de: Sie sind angemeldet als <0>{username}</0>
