--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "dropperx": "~1.0.1",
     "express": "~4.17.1",
     "express-async-errors": "~3.1.1",
+    "express-joi-validation": "~5.0.0",
     "express-session": "~1.17.1",
     "fast-deep-equal": "~3.1.3",
     "flag-icon-css": "~3.5.0",
