ELMU #98 Add link to reset password on account page

--- a/src/components/pages/account.yml
+++ b/src/components/pages/account.yml
@@ -1,6 +1,9 @@
 account.headline:
   en: Account
   de: Konto
+account.resetPassword:
+  en: Reset password
+  de: Kennwort wiedereinsetzen
 account.updateSuccessMessage:
   en: Your account was updated successfully.
   de: Ihr Konto wurde erfolgreich aktualisiert.
