--- a/src/components/pages/doc.yml
+++ b/src/components/pages/doc.yml
@@ -13,6 +13,9 @@ language:
 id:
   en: ID
   de: ID
+restoredFrom:
+  en: Restored from
+  de: Wiederhergestellt aus
 permalink:
   en: Permalink
   de: Permalink
