ELMU #98 Simplify password reset flow on account page

--- a/src/components/pages/account.yml
+++ b/src/components/pages/account.yml
@@ -7,6 +7,9 @@ account.resetPassword:
 account.updateSuccessMessage:
   en: Your account was updated successfully.
   de: Ihr Konto wurde erfolgreich aktualisiert.
+account.passwordResetEmailSent:
+  en: The password reset link has been sent to {email}
+  de: Der Link zum Zurücksetzen des Kennworts wurde an {email} gesendet
 profile.headline:
   en: Profile
   de: Profil
