--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     <<: *defaults
     docker:
-      - image: circleci/node:14.15.3
+      - image: cimg/node:16.10.0
       - image: maildev/maildev:1.1.0
       - image: mongo:4.2.11-bionic
       - image: minio/minio:RELEASE.2020-12-18T03-27-42Z
