--- a/package.json
+++ b/package.json
@@ -132,6 +132,7 @@
     "jest": "~26.6.3",
     "less-plugin-autoprefix": "~2.0.0",
     "moment-locales-webpack-plugin": "~1.2.0",
+    "node-mocks-http": "~1.11.0",
     "process": "~0.11.10",
     "sinon": "~9.2.2",
     "umzug": "~2.3.0",
