--- a/package.json
+++ b/package.json
@@ -21,79 +21,79 @@
   },
   "private": true,
   "dependencies": {
-    "@ant-design/icons": "~4.3.0",
-    "@babel/core": "~7.12.10",
-    "@babel/preset-env": "~7.12.11",
-    "@babel/preset-react": "~7.12.10",
-    "@babel/register": "~7.12.10",
-    "@fortawesome/fontawesome-free": "~5.15.1",
+    "@ant-design/icons": "~4.7.0",
+    "@babel/core": "~7.15.8",
+    "@babel/preset-env": "~7.15.8",
+    "@babel/preset-react": "~7.14.5",
+    "@babel/register": "~7.15.3",
+    "@fortawesome/fontawesome-free": "~5.15.4",
     "@unly/iso3166-1": "~1.0.2",
     "abcjs": "~5.12.0",
     "accept-language-parser": "~1.5.0",
     "acho": "~4.0.6",
-    "antd": "~4.9.4",
+    "antd": "~4.16.13",
     "any-base": "~1.1.0",
     "array-shuffle": "~2.0.0",
-    "async": "~3.2.0",
+    "async": "~3.2.1",
     "aurelia-dependency-injection": "~1.5.2",
     "auto-bind": "~4.0.0",
-    "aws-sdk": "~2.817.0",
-    "bcrypt": "~5.0.0",
-    "classnames": "~2.2.6",
+    "aws-sdk": "~2.1006.0",
+    "bcrypt": "~5.0.1",
+    "classnames": "~2.3.1",
     "clipboard-copy": "~4.0.1",
-    "color": "~3.1.3",
+    "color": "~3.2.1",
     "connect-mongo": "~3.2.0",
     "cookie-parser": "~1.4.5",
-    "core-js": "~3.8.1",
+    "core-js": "~3.18.3",
     "decompress": "~4.2.1",
     "del": "~6.0.0",
     "dropperx": "~1.0.1",
     "express": "~4.17.1",
     "express-async-errors": "~3.1.1",
     "express-joi-validation": "~5.0.0",
-    "express-session": "~1.17.1",
+    "express-session": "~1.17.2",
     "fast-deep-equal": "~3.1.3",
     "flag-icon-css": "~3.5.0",
     "format-error": "~1.0.0",
-    "gravatar": "~1.8.1",
+    "gravatar": "~1.8.2",
     "htmlescape": "~1.1.1",
     "http-errors": "~1.8.0",
-    "i18next": "~19.8.4",
+    "i18next": "~19.9.2",
     "i18next-icu": "~1.4.2",
-    "iframe-resizer": "~4.2.11",
-    "immutable": "~4.0.0-rc.12",
-    "joi": "~17.3.0",
+    "iframe-resizer": "~4.3.2",
+    "immutable": "~4.0.0",
+    "joi": "~17.4.2",
     "js-cookie": "~2.2.1",
     "locale-compare": "~1.0.0",
     "make-error": "~1.3.6",
-    "markdown-it": "~12.0.4",
-    "mem": "~8.0.0",
-    "memoize-one": "~5.1.1",
-    "mime": "~2.4.7",
-    "minio": "7.0.16",
+    "markdown-it": "~12.2.0",
+    "mem": "~8.1.1",
+    "memoize-one": "~5.2.1",
+    "mime": "~2.5.2",
+    "minio": "7.0.19",
     "moment": "~2.29.1",
-    "mongodb": "~3.6.3",
-    "multer": "~1.4.2",
-    "node-graceful": "~3.0.1",
-    "nodemailer": "~6.4.17",
+    "mongodb": "~3.7.2",
+    "multer": "~1.4.3",
+    "node-graceful": "~3.1.0",
+    "nodemailer": "~6.7.0",
     "parse5": "~6.0.1",
     "parseboolean": "~1.0.0",
-    "passport": "~0.4.1",
+    "passport": "~0.5.0",
     "passport-local": "~1.0.0",
-    "pretty-bytes": "~5.5.0",
+    "pretty-bytes": "~5.6.0",
     "prop-types": "~15.7.2",
     "quick-lru": "~5.1.1",
     "react": "~16.14.0",
-    "react-beautiful-dnd": "~13.0.0",
+    "react-beautiful-dnd": "~13.1.0",
     "react-color": "~2.19.3",
     "react-compare-slider": "~2.1.0",
-    "react-countdown": "~2.3.1",
+    "react-countdown": "~2.3.2",
     "react-dimensions": "~1.3.1",
     "react-dom": "~16.14.0",
     "react-highlighter": "~0.4.3",
-    "react-i18next": "~11.8.5",
+    "react-i18next": "~11.12.0",
     "react-piano": "~3.1.3",
-    "react-player": "~2.7.2",
+    "react-player": "~2.9.0",
     "react-soundplayer": "~1.0.5",
     "react-vis": "~1.11.7",
     "read-all-stream": "~3.1.0",
@@ -108,19 +108,19 @@
     "tree-crawl": "~1.1.0",
     "urlencode": "~1.1.0",
     "uuid": "~8.3.2",
-    "yaml": "~1.10.0"
+    "yaml": "~1.10.2"
   },
   "devDependencies": {
-    "acorn": "~8.0.4",
+    "acorn": "~8.5.0",
     "babel-jest": "~26.6.3",
     "babel-loader": "~8.2.2",
-    "delay": "~4.4.0",
+    "delay": "~4.4.1",
     "docker-cli-js": "~2.8.0",
-    "eslint": "~7.16.0",
-    "eslint-plugin-react": "~7.21.5",
+    "eslint": "~7.32.0",
+    "eslint-plugin-react": "~7.26.1",
     "eslint-plugin-react-hooks": "~4.2.0",
-    "execa": "~5.0.0",
-    "glob": "~7.1.6",
+    "execa": "~5.1.1",
+    "glob": "~7.2.0",
     "gulp": "~4.0.2",
     "gulp-csso": "~4.0.1",
     "gulp-eslint": "~6.0.0",
@@ -133,9 +133,9 @@
     "less-plugin-autoprefix": "~2.0.0",
     "moment-locales-webpack-plugin": "~1.2.0",
     "process": "~0.11.10",
-    "sinon": "~9.2.2",
+    "sinon": "~9.2.4",
     "umzug": "~2.3.0",
-    "webpack": "~5.11.0",
-    "webpack-bundle-analyzer": "~4.3.0"
+    "webpack": "~5.58.1",
+    "webpack-bundle-analyzer": "~4.5.0"
   }
 }
