ELMU #133 add github actions

--- a/.eslintrc
+++ b/.eslintrc
@@ -50,10 +50,11 @@
     "newline-per-chained-call": ["off"],
     "no-confusing-arrow": ["off"],
     "no-empty-function": ["off"],
-    "no-extra-parens": ["error", "all", { "nestedBinaryExpressions": false, ignoreJSX: "all" }],
+    "no-extra-parens": ["error", "all", { "nestedBinaryExpressions": false, "ignoreJSX": "all" }],
     "no-implicit-coercion": ["error", { "allow": ["!!", "~"] }],
     "no-inline-comments": ["off"],
     "no-magic-numbers": ["off"],
+    "no-multiple-empty-lines": ["error", { "max": 1, "maxEOF": 1 }],
     "no-negated-condition": ["off"],
     "no-ternary": ["off"],
     "no-underscore-dangle": ["off"],
@@ -61,7 +62,6 @@
     "object-curly-spacing": ["error", "always"],
     "object-curly-newline": ["error", { "consistent": true }],
     "object-property-newline": ["error", { "allowAllPropertiesOnSameLine": true }],
-    "object-shorthand": ["error", "consistent-as-needed"],
     "one-var": ["error", "never"],
     "operator-linebreak": ["error", "before"],
     "padded-blocks": ["off"],
@@ -81,7 +81,7 @@
     "react/jsx-closing-bracket-location": [1, "props-aligned"],
     "react/jsx-filename-extension": ["off"],
     "react/jsx-fragments": ["error", "element"],
-    "react/jsx-handler-names": ["error", { eventHandlerPrefix: "(handle)", eventHandlerPropPrefix: "(on|before|after)" }],
+    "react/jsx-handler-names": ["error", { "eventHandlerPrefix": "(handle)", "eventHandlerPropPrefix": "(on|before|after)" }],
     "react/jsx-indent": ["error", 2],
     "react/jsx-indent-props": ["error", 2],
     "react/jsx-max-depth": ["off"],
