--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "The elmu website",
   "main": "src/index.js",
   "engines": {
-    "node": "14.x.x"
+    "node": "16.x.x"
   },
   "scripts": {
     "ci:prepare": "gulp ci:prepare",
@@ -50,6 +50,7 @@
     "dropperx": "~1.0.1",
     "express": "~4.17.1",
     "express-async-errors": "~3.1.1",
+    "express-joi-validation": "~5.0.0",
     "express-session": "~1.17.1",
     "fast-deep-equal": "~3.1.3",
     "flag-icon-css": "~3.5.0",
@@ -85,6 +86,7 @@
     "react": "~16.14.0",
     "react-beautiful-dnd": "~13.0.0",
     "react-color": "~2.19.3",
+    "react-compare-slider": "~2.1.0",
     "react-countdown": "~2.3.1",
     "react-dimensions": "~1.3.1",
     "react-dom": "~16.14.0",
@@ -130,6 +132,7 @@
     "jest": "~26.6.3",
     "less-plugin-autoprefix": "~2.0.0",
     "moment-locales-webpack-plugin": "~1.2.0",
+    "node-mocks-http": "~1.11.0",
     "process": "~0.11.10",
     "sinon": "~9.2.2",
     "umzug": "~2.3.0",
