--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -2,10 +2,10 @@ areYouSure:
   en: Are you sure?
   de: Sind Sie sicher?
 deleteSectionConfirmation:
-  en: Do you really want do delete the section?
+  en: Do you really want to delete the section?
   de: Möchten Sie den Abschnitt wirklich löschen?
 thisActionIsIrreversible:
-  en: This Action is irreversible
+  en: This Action is irreversible!
   de: Diese Aktion ist unwiderrufbar!
 pleaseSpecifyAReason:
   en: Please specify a reason
@@ -13,3 +13,6 @@ pleaseSpecifyAReason:
 deleteAllDescendantRevisions:
   en: Also delete all descendant revisions
   de: Auch alle nachfolgenden Revisionen löschen
+restoreDocumentRevisionConfirmation:
+  en: Do you really want to restore the content of revision {revisionId}?
+  de: Möchten Sie den Inhalt der Revision {revisionId} wirklich wiederherstellen?
