--- a/.github/workflows/build-elmu.yml
+++ b/.github/workflows/build-elmu.yml
@@ -2,7 +2,7 @@ name: Build Commit
 on: [push]
 jobs:
   build-elmu:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     env:
       NODE_ENV: development
       ELMU_ENV: test
