--- a/package.json
+++ b/package.json
@@ -41,8 +41,8 @@
     "bcrypt": "~5.0.1",
     "classnames": "~2.3.1",
     "clipboard-copy": "~4.0.1",
-    "color": "~3.2.1",
-    "connect-mongo": "~3.2.0",
+    "color": "~4.0.1",
+    "connect-mongo": "~4.6.0",
     "cookie-parser": "~1.4.5",
     "core-js": "~3.18.3",
     "decompress": "~4.2.1",
@@ -58,12 +58,13 @@
     "gravatar": "~1.8.2",
     "htmlescape": "~1.1.1",
     "http-errors": "~1.8.0",
-    "i18next": "~19.9.2",
-    "i18next-icu": "~1.4.2",
+    "i18next": "~21.3.0",
+    "i18next-icu": "~2.0.3",
     "iframe-resizer": "~4.3.2",
     "immutable": "~4.0.0",
+    "intl-messageformat": "~9.9.2",
     "joi": "~17.4.2",
-    "js-cookie": "~2.2.1",
+    "js-cookie": "~3.0.1",
     "locale-compare": "~1.0.0",
     "make-error": "~1.3.6",
     "markdown-it": "~12.2.0",
@@ -72,7 +73,7 @@
     "mime": "~2.5.2",
     "minio": "7.0.19",
     "moment": "~2.29.1",
-    "mongodb": "~3.7.2",
+    "mongodb": "~4.1.3",
     "multer": "~1.4.3",
     "node-graceful": "~3.1.0",
     "nodemailer": "~6.7.0",
