--- a/package.json
+++ b/package.json
@@ -67,8 +67,7 @@
     "locale-compare": "~1.0.0",
     "make-error": "~1.3.6",
     "markdown-it": "~12.2.0",
-    "mem": "~8.1.1",
-    "memoize-one": "~5.2.1",
+    "memoizee": "~0.4.15",
     "mime": "~2.5.2",
     "minio": "7.0.19",
     "moment": "~2.29.1",
@@ -82,7 +81,6 @@
     "passport-local": "~1.0.0",
     "pretty-bytes": "~5.6.0",
     "prop-types": "~15.7.2",
-    "quick-lru": "~5.1.1",
     "react": "~16.14.0",
     "react-beautiful-dnd": "~13.1.0",
     "react-color": "~2.19.3",
