--- a/src/components/not-supported-section.yml
+++ b/src/components/not-supported-section.yml
@@ -1,3 +1,3 @@
 messageTitle:
   en: This content is not supported
-  de: Dieser Inhalt ist nicht unterstützt
+  de: Dieser Inhalt wird nicht unterstützt
