ELMU #135 Fix translations and minor code style

--- a/src/components/confirmation-dialogs.yml
+++ b/src/components/confirmation-dialogs.yml
@@ -27,4 +27,4 @@ password:
   de: Kennwort
 wrongPasswordProvided:
   en: The wrong password was provided
-  de: Falsches Passwort
+  de: Das Kennwort ist ungültig
