ELMU #171 Change text for password reset failure

--- a/src/components/pages/complete-password-reset.yml
+++ b/src/components/pages/complete-password-reset.yml
@@ -22,8 +22,8 @@ passwordChangedSuccessfully:
 redirectMessage:
   en: You will be redirected to the <0>logon page</0> in {seconds, plural, =1 {# second} other {# seconds}}.
   de: Sie werden in {seconds, plural, =1 {# Sekunde} other {# Sekunden}} auf die <0>Anmeldeseite</0> weitergeleitet.
-passwordChangeFailure:
-  en: The password changing code is invalid or expired.
+passwordResetFailure:
+  en: The password reset code is invalid or expired.
   de: Der Kennwortänderungs-Code ist ungültig oder abgelaufen.
 homeLink:
   en: Home
