--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "express-joi-validation": "~5.0.0",
     "express-session": "~1.17.2",
     "fast-deep-equal": "~3.1.3",
+    "flag-icon-css": "~3.5.0",
     "format-error": "~1.0.0",
     "glob": "~7.2.0",
     "gravatar": "~1.8.2",
