--- a/src/ui/validation.yml
+++ b/src/ui/validation.yml
@@ -7,3 +7,6 @@ urlInvalid:
 urlInsecure:
   en: Please specify a URL with a secure protocol (HTTPS)
   de: Bitte geben Sie eine Adresse mit sicherem Protokoll (HTTPS) an
+markdownBoldOrItalicWithinHeaders:
+  en: Bold or italic should not be used within headers
+  de: Überschriften sollten keine fette oder kursive Auszeichnung enthalten
