ELMU #196 Add default tags table to settings page

--- a/src/components/pages/settings.yml
+++ b/src/components/pages/settings.yml
@@ -13,3 +13,6 @@ termsPageHeader:
 footerLinksHeader:
   en: Footer links
   de: Footer-Links
+defaultTagsHeader:
+  en: Default tags
+  de: Vordefinierte Tags
