--- a/package.json
+++ b/package.json
@@ -22,10 +22,6 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "~4.7.0",
-    "@babel/core": "~7.15.8",
-    "@babel/preset-env": "~7.15.8",
-    "@babel/preset-react": "~7.14.5",
-    "@babel/register": "~7.15.3",
     "@educandu/node-jsx-loader": "~2.1.0",
     "@fortawesome/fontawesome-free": "~5.15.4",
     "@unly/iso3166-1": "~1.0.2",
@@ -87,8 +83,8 @@
     "react-beautiful-dnd": "~13.1.0",
     "react-color": "~2.19.3",
     "react-compare-slider": "~2.1.0",
+    "react-cool-dimensions": "~2.0.7",
     "react-countdown": "~2.3.2",
-    "react-dimensions": "~1.3.1",
     "react-dom": "~16.14.0",
     "react-highlighter": "~0.4.3",
     "react-i18next": "~11.12.0",
@@ -112,14 +108,14 @@
   },
   "devDependencies": {
     "@jest/globals": "~27.3.1",
-    "acorn": "~8.5.0",
-    "babel-loader": "~8.2.2",
     "docker-cli-js": "~2.8.0",
+    "easy-table": "~1.2.0",
     "eslint": "~7.32.0",
     "eslint-plugin-import": "~2.25.2",
     "eslint-plugin-react": "~7.26.1",
     "eslint-plugin-react-hooks": "~4.2.0",
     "execa": "~5.1.1",
+    "fs-extra": "~10.0.0",
     "gulp": "~4.0.2",
     "gulp-csso": "~4.0.1",
     "gulp-eslint": "~6.0.0",
@@ -130,11 +126,8 @@
     "gulp-sourcemaps": "~3.0.0",
     "jest": "~27.2.5",
     "less-plugin-autoprefix": "~2.0.0",
-    "moment-locales-webpack-plugin": "~1.2.0",
     "node-mocks-http": "~1.11.0",
     "process": "~0.11.10",
-    "sinon": "~11.1.2",
-    "webpack": "~5.58.2",
-    "webpack-bundle-analyzer": "~4.5.0"
+    "sinon": "~11.1.2"
   }
 }
