--- a/.eslintrc
+++ b/.eslintrc
@@ -59,6 +59,7 @@
     "no-negated-condition": ["off"],
     "no-ternary": ["off"],
     "no-underscore-dangle": ["off"],
+    "no-unused-expressions": ["off"],
     "no-unused-vars": ["error", { "ignoreRestSiblings": true }],
     "object-curly-spacing": ["error", "always"],
     "object-curly-newline": ["error", { "consistent": true }],
